--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.depo.trask">
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- android:theme="@style/Theme.MyTheme"-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTheme"
+        android:networkSecurityConfig="@xml/network_security_config"
         >
         <activity
             android:name=".MainActivity"
